# AutoSelect

./: main.py  pyproject.toml
