[tool.poetry]
name = "massiveridibooks"
version = "0.1.0"
description = ""
authors = ["DeltaLaboratory <delta@deltalab.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "*"
coloredlogs = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
